--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Company 2015</p>
+        <p>&copy; Enveritas Group 2015</p>
       </footer>
     </div> <!-- /container -->
 
