add social icons

--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
           </ul>
         </div>
         <div class="col-md-3">
+
+          <ul class="social-icons">
+            <li><a target="_blank" href="https://plus.google.com/share?url=http://enveritasgroup.com/hospitality" data-original-title="Goole Plus" class="social_googleplus"></a></li>
+            <li><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http://enveritasgroup.com/hospitality" data-original-title="Facebook" class="social_facebook"></a></li>
+            <li><a target="_blank" href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://enveritasgroup.com/hospitality&amp;source=http%3A%2F%2Fenveritasgroup.com" data-original-title="Linkedin" class="social_linkedin"></a></li>
+            <li><a target="_blank" href="http://twitter.com/home?status=Go+Team%21+Content+Marketing+Team+Organization+http://enveritasgroup.com/hospitality" data-original-title="Twitter" class="social_twitter"></a></li>
+            <li><a target="_blank" href="http://www.stumbleupon.com/submit?url=http://enveritasgroup.com/hospitality" data-original-title="Stumble Upon" class="social_stumbleupon"></a></li>
+            <li><a target="_blank" href="http://pinterest.com/pin/create/button/?url=http://enveritasgroup.com/hospitality&amp;media=http%3A%2F%2Fenveritasgroup.com%2Fwp-content%2Fuploads%2F2015%2F04%2Fdiverse-team.jpg&amp;description=My+mom+swears+that+my+lifelong+motto+has+been+%E2%80%9CI%E2%80%99ll+do+it+myself.%E2%80%9D+She+says+that+even+as+a+toddler%2C+I+was+adamant+about+being+in+charge.+Have+you+ever+heard+of+Type+A+and+Type+B+personality+traits%3F+I%E2%80%99m+not+sure+how+much+stock+you+put+into+it%2C+but+if+I+were+to+place+%5B%26hellip%3B%5D" data-original-title="Pinterest" class="social_pintrest"></a></li>
+            <li><a target="_blank" href="http://www.tumblr.com/share?v=3&amp;u=http://enveritasgroup.com/hospitality&amp;t=Go+Team%21+Content+Marketing+Team+Organization" data-original-title="Tumblr" class="social_tumblr"></a></li>
+          </ul>
+
           <p><img class="img-thumbnail" src="img/pdf.png" /></p>
           <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#popup">Download Now</button>
         </div>
